# todo-fastapi-sql

./: .env  .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 92015dc6a233_create_tables.py  9ee011f5fa0c_add_user_table_and_relationship.py
db/: database.py
models/: todo_model.py
routes/: auth_routes.py  todo_routes.py
schemas/: auth_schemas.py  todo_schemas.py
utils/: auth_util.py
